--- a/css/style.css
+++ b/css/style.css
@@ -741,6 +741,30 @@
 		background-attachment: fixed, fixed;
 		background-position: top left, center center;
 	}
+	#three {
+		background: url('images/overlay.png'), url('../images/two.jpg');
+		background-size: 256px 256px, cover;
+		background-attachment: fixed, fixed;
+		background-position: top left, center center;
+	}
+	#four {
+		background: url('images/overlay.png'), url('../images/two.jpg');
+		background-size: 256px 256px, cover;
+		background-attachment: fixed, fixed;
+		background-position: top left, center center;
+	}
+	#five {
+		background: url('images/overlay.png'), url('../images/two.jpg');
+		background-size: 256px 256px, cover;
+		background-attachment: fixed, fixed;
+		background-position: top left, center center;
+	}
+	#six {
+		background: url('images/overlay.png'), url('../images/two.jpg');
+		background-size: 256px 256px, cover;
+		background-attachment: fixed, fixed;
+		background-position: top left, center center;
+	}
 
 /*********************************************************************************/
 /* Work                                                                          */
