--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,16 @@
 /* Basic                                                                         */
 /*********************************************************************************/
 
+	.format{
+		display: table;
+		text-align:center;
+		margin: 0 auto;
+	}
+	
+	.profile > a{
+		display: block;
+	}
+	
 	body {
 		background: #fff;
 	}
@@ -50,7 +60,7 @@
 		}
 		
 	h2 {
-		font-size: 2.25em;
+		font-size: 1.25em;
 		letter-spacing: -2px;
 		line-height: 1.25em;
 	}
@@ -484,7 +494,7 @@
 		}
 		
 			.box.style2 {
-				padding: 3.5em 2.5em 3.5em 2.5em;
+				padding: 20px 40px;
 			}
 
 	/* Main */
@@ -752,6 +762,7 @@
 		background-size: 256px 256px, cover;
 		background-attachment: fixed, fixed;
 		background-position: top left, center center;
+		display:block;
 	}
 	#five {
 		background: url('images/overlay.png'), url('../images/two.jpg');
